# saragossa

./: .gitleaks.toml  .lycheeignore  .markdownlint.json  AGENTS.md  CLA.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  NOTICE  README.md  build.rs  deny.toml  llms.txt  prek.toml  release-plz.toml
.github/workflows/: audit-cron.yml  auto-merge.yml  auto-update-branch.yml  cla.yml  cleanup-branches.yml  codeql.yml  docs-lint.yml  nightly.yml  release-plz.yml  rust.yml  semgrep.yml  shellcheck.yml
assets/: melfilters128.bytes  steel_attention.metal
examples/: bench_stt.rs  mtp_qmm_gate.rs
src/: activation.rs  assets.rs  bench_serve.rs  catalog.rs  chat_template.rs  config.rs  decode_resident.rs  decoder.rs  doctor_bench.rs  embedding.rs  error.rs  golden.rs  hf_cache.rs  hf_resolve.rs  kernels.metal  lib.rs  linear.rs  linear_attention.rs  main.rs  memory_guard.rs  mlp.rs  norm.rs  quantization.rs  qwen_loader.rs  rope.rs  run_repl.rs  runtime.rs  runtime_flags.rs  runtime_preset.rs  safetensor.rs  sampling.rs  tensor.rs  test_support.rs  tokenizer.rs  tts.rs  tts_clone.rs  tts_codec.rs  tts_codec_gpu.rs  tts_mimi.rs  tts_speaker.rs  (+1 more)
src/bench_serve/: sse.rs  tests.rs
src/config/: accessors.rs  gemma_defaults.rs  mod.rs  resolve.rs  tests.rs  types.rs
src/decode_resident/: arena.rs  attention.rs  dense_tail.rs  duo.rs  kernels.rs  layers.rs  moe_tail.rs  tests.rs  types.rs  utils.rs
src/decoder/: attention.rs  attention_cache.rs  attention_ops.rs  duo.rs  flags.rs  generation.rs  lightbatch.rs  loading.rs  mtp.rs  mtp_adaptive.rs  qwen35_oracles.rs  resident.rs  tests.rs
src/devtools/: dflash.rs  mod.rs
src/guided/: json.rs  json_tests.rs  mod.rs
src/linear_attention/: tests.rs
src/metal_backend/: attention.rs  attention_checks.rs  barriers.rs  buffers.rs  byte_helpers.rs  core.rs  eligibility.rs  flags.rs  kernel_timing.rs  lightbatch_duo.rs  linear_attention.rs  linear_attention_encode.rs  lm_head.rs  matmul.rs  matmul_align64.rs  matmul_encode.rs  matmul_resident.rs  matmul_select.rs  matmul_weight.rs  mod.rs  moe.rs  moe_encode.rs  moe_na.rs  moe_shared.rs  na_gemm.metal  na_gemm.rs  pipelines.rs  prefill.rs  profiling.rs  scratch.rs  tests.rs  whisper_encode.rs
src/qwen_loader/: gemma4_test_fixtures.rs  gemma4_tests.rs  quantized.rs  shape_validation.rs  test_fixtures.rs  tests.rs
src/serve/: anthropic.rs  args.rs  audio.rs  cache.rs  embeddings.rs  error.rs  http.rs  mod.rs  protocol.rs  state.rs  streaming.rs  warmup.rs
src/text_embedder/: config.rs  error.rs  math.rs  mod.rs  model.rs  weights.rs
src/tts/: assets.rs  catalog.rs  config.rs  constants.rs  generation.rs  helpers.rs  inputs.rs  load.rs  mod.rs  model.rs  payload.rs  sampling.rs  synth.rs  tokenizer.rs  weights.rs
src/tts_codec/: tests.rs
src/tts_mimi/: tests.rs
src/tts_speaker/: tests.rs
src/whisper/: decoder.rs  tests.rs
tests/golden/: README.md  clone_e2e_samples.json  clone_first_cb0_logits.json  clone_first_cb0_token.json  clone_icl_ids.json  clone_icl_input.json  clone_icl_trailing.json  clone_mel24k.json  clone_pcm24k.json  mimi_ref_codes.json  speaker_xvector.json  voicedesign_e2e_codes.json  voicedesign_e2e_samples.json  voicedesign_talker_logits.json  whisper_encoder_input_mel.json  whisper_encoder_out.json  whisper_mel.json  whisper_samples16k.json  whisper_transcribe_lang.json  whisper_transcribe_text.json  whisper_transcribe_text.txt
(+36 files in other folders)
