[package]
name = "saragossa"
version = "0.1.0"
edition = "2021"
description = "A fast pure-Rust LLM inference engine for Apple Silicon (Metal). Beats Apple's mlx_lm on Mixture-of-Experts models."
license = "MIT OR Apache-2.0"
repository = "https://github.com/azerozero/saragossa"
keywords = ["llm", "inference", "metal", "apple-silicon", "transformer"]
categories = ["science", "concurrency", "command-line-utilities"]
rust-version = "1.85"

[lib]
name = "saragossa"
path = "src/lib.rs"

[[bin]]
name = "saragossa"
path = "src/main.rs"

[features]
default = []
metal = ["dep:metal"]

[dependencies]
thiserror = "2"
safetensors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = { version = "0.22.2", default-features = false, features = ["fancy-regex"] }
rayon = "1"
bytemuck = "1"
metal = { version = "0.29", optional = true }

[dev-dependencies]
proptest = "1"
tempfile = "3"
