[package]
name = "saragossa"
version = "0.1.0"
edition = "2021"
description = "Pure-Rust Metal inference engine for Apple Silicon: Qwen dense/MoE LLMs, Whisper STT, Qwen3 TTS, OpenAI-compatible server — GPU-resident decode, 35B MoE at ~105 tok/s."
license = "MIT OR Apache-2.0"
repository = "https://github.com/azerozero/saragossa"
keywords = ["llm", "inference", "metal", "apple-silicon", "transformer"]
categories = ["science", "concurrency", "command-line-utilities"]
rust-version = "1.85"
build = "build.rs"

[lib]
name = "saragossa"
path = "src/lib.rs"

[[bin]]
name = "saragossa"
path = "src/main.rs"
required-features = ["devtools"]

[[example]]
name = "mtp_qmm_gate"
required-features = ["metal"]

[features]
default = ["metal", "devtools"]
metal = []
devtools = []

[dependencies]
thiserror = "2"
safetensors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = { version = "0.22.2", default-features = false, features = ["fancy-regex"] }
rayon = "1"
bytemuck = "1"
rustfft = "6"
hound = "3.5"
metal = "0.29"
md5 = "0.7"
sha2 = "0.10"
hf-hub = { version = "0.5", default-features = false, features = ["ureq", "rustls-tls"] }

[target.'cfg(target_os = "macos")'.dependencies]
mach-sys = "0.5"

[dev-dependencies]
proptest = "1"
tempfile = "3"
